--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -12,6 +12,7 @@ Smooth Scroll --------*/
   overflow-x: hidden;
   height: calc(100vh - var(--nav-size));
   width: 100%;
+
 }
 
 /* common for each section */
@@ -20,7 +21,11 @@ Smooth Scroll --------*/
   height: 100vh;
   scroll-snap-align: center;
   position: relative;
+  scroll-snap-points-y: 50vh;
 }
+
+
+
 
 .front-container section p {
   font-size: 1rem;
@@ -114,13 +119,24 @@ section#first .see-more {
 /* End of Hero */
 
 section#second {
-  max-width: fit-content;
-}
-section#third {
+  height: 100vh;
   max-width: fit-content;
 }
 
+section#third {
+  height: 100vh;
+  max-width: fit-content;
+}
+
+section#fourth {
+  height: 100vh;
+  max-width: fit-content;
+  
+}
+
+
 section#fifth {
+  height: 100vh;
   background-image: url("../images/boots.jpg");
   background-size: cover;
 }
@@ -130,8 +146,19 @@ section#sixth {
   background-color: var(--mainGrey);
 }
 
+section#seventh {
+  height: 100vh;
+}
+
+section#seventh img{
+  width:180px;
+}
+
+
+
+
 section#footer {
-  height: calc(100vh - var(--nav-size));
+  height: calc(70vh - var(--nav-size));
 }
 
 .list-item h1 {
@@ -166,7 +193,7 @@ section#footer {
   }
 
   .list-item {
-    line-height: 2.7em;
+    line-height: 1.5em;
   }
 }
 
@@ -211,30 +238,27 @@ section#footer {
 }
 .main-punchline {
   color: var(--mainGrey);
-  line-height: 1.8em;
   text-align: left;
   margin-left: 5%;
 }
 
 .main-punchline--lrg {
-  font-size: 3.5em;
-  line-height: 1em;
+  font-size: 4vw;
   font-weight: 600;
   letter-spacing: 0.02em;
   width: 90%;
-  bottom: 19%;
+  bottom: 20px;
+  line-height: 1.2em;
 }
 .main-punchline strong {
   font-family: "PoppinsBold";
-  line-height: 2em;
 }
 
 .main-punchline--p {
-  font-size: 1.2em;
   letter-spacing: 0.03em;
   margin-top: 3%;
   width: 70%;
-  line-height: 1.7em;
+  font-size: 1.2rem;
 }
 
 .short-border {
@@ -263,3 +287,282 @@ em {
   font-weight: bold;
   font-size: 1.3em;
 }
+
+.pad-me{
+  padding: 5%;
+}
+
+
+/* RESPONSIVE HOMEPAGE */
+
+.c-grid--3x1{
+  display: grid;
+  grid-template-columns: 1fr 1fr minmax(160px, 1fr);
+  grid-template-rows: 1fr 1fr auto;
+  grid-gap:20px;
+}
+
+@media (max-width: 1025px){
+
+  .c-section--pad-vh{
+    padding-top:5vh;
+  }
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height:75vh;
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1 / 3;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1 / 3;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:350px;
+}
+ .sect-2-item2 {
+  grid-column:2;
+  grid-row:3;
+}
+.sect-2-item2 img{
+  width:350px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .grid-item2-stretch1{
+    grid-column:2;
+    grid-row:2;
+  }
+
+  /*section fourth*/
+
+  section#fourth{
+    scroll-snap-align: start;
+    height:200vh;
+  }
+  
+  .sect-4-item1{
+    height:0;
+  }
+
+  .sect-4-item2{
+    grid-column: 1/3;
+    grid-row:1;
+  }
+
+  .sect-4-item3{
+    height:0;
+  }
+
+  .sect-4-item4{
+    grid-column: 1 / 3;
+    grid-row:2;
+  }
+
+  .sect-4-item5{
+    height:0;
+  }
+  .sect-4-item6{
+    grid-column: 1 / 3;
+    grid-row:3;
+  }
+
+    /*section fifth */
+    .sect-5-item1{
+      padding-top:100px;
+      padding-right:100px;
+      grid-column:2;
+    }
+
+    /*section sixth */
+    section#sixth{
+      scroll-snap-align: start;
+      height:160vh;
+    }
+  
+    .sect-6-item1{
+      padding-top:40px;
+      height:70vh;
+      
+    }
+    .sect-6-item2{
+      padding-top:20px;
+      scroll-snap-align: start;
+      text-align: center;
+      grid-column: 2 / 3;
+      width:60%;
+    }
+
+    section#seventh{
+      scroll-snap-align: start;
+      padding-top: 20px;
+    }
+
+}
+
+@media (max-width:810px){
+
+  .c-section--pad-vh{
+    padding-top:10vh;
+  }
+
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns:1fr;
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:250px;
+}
+ .sect-2-item2 {
+  grid-column:1;
+  grid-row:4;
+}
+.sect-2-item2 img{
+  width:250px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .grid-item2-stretch1{
+    grid-column:2;
+    grid-row:2;
+  }
+
+ 
+
+}
+
+
+
+@media (max-width: 500px){
+  .c-section--pad-vh{
+    padding-top:5vh;
+  }
+  
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1 / 3;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1 / 3;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:200px;
+}
+ .sect-2-item2 {
+  grid-column:1;
+  grid-row:4;
+}
+.sect-2-item2 img{
+  width:200px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:3;
+    width:200px;
+    margin-left: 5%;
+  }
+
+  .grid-item1-stretch{
+    scroll-snap-align: start;
+  }
+  .grid-item2-stretch1{
+
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .main-punchline--p{
+    font-size:13px;
+  }
+
+  /*section fifth */
+  .sect-5-item1{
+    grid-column:1/3;
+    width:80%;
+  }
+
+
+  /*section sixth */
+
+  section#sixth{
+    scroll-snap-align: start;
+    height:200vh;
+  }
+
+  .sect-6-item1{
+    height:70vh;
+    
+  }
+  .sect-6-item2{
+    scroll-snap-align: start;
+    height:100vh;
+  }
+
+  .o-form__control{
+    min-width:fit-content;
+    max-width: 100%;
+  }
+
+  .list-item-label {
+    font-size:10px;
+    line-height: 0px;
+  }
+  
+}
+
