--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -139,6 +139,7 @@ dt:first-child {
   padding:2%;
   width:100%;
   margin:auto;
+  height:100%;
 }
 
 .bckgd-white{
@@ -152,13 +153,8 @@ background-color: white;
   max-width: calc(1200px + 2 * 20px);
   text-align: inherit;
 }
-@media (min-width: 1024) {
-  .o-container {
-    padding-left: 60px;
-    padding-right: 60px;
-    max-width: calc(1100px + 2 * 60px);
-  }
-}
+
+
 
 .o-card-media {
   -webkit-box-align: start;
@@ -407,7 +403,6 @@ html {
 
 
 
-
 @media screen and (min-width:650px){
 
   .grid-item1 {
@@ -461,23 +456,8 @@ html {
 }
 
 
-.c-grid--3x1 {
-  
-}
 
-@media (min-width:1000px){
-  .c-grid--3x1{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr auto;
-}
-}
-@media (max-width:999px){
-  .c-grid--3x1{
-    grid-template-columns: 1fr 0 1fr 1fr;
-    max-width:50%;
-}
-}
+
 
 .c-grid--4x1 {
   display: grid;
@@ -517,6 +497,7 @@ html {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-gap: 0.5rem;
+  scroll-snap-type: mandatory;
 }
 
 .c-grid--fill > div {
@@ -673,24 +654,6 @@ html {
   grid-row: 2 / 4;
 }
 
-@media screen and (max-width: 600px) {
-  .c-grid--span {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: auto;
-  }
-  .c-grid--span-item-a {
-    grid-row: 1;
-    grid-column: 1 / 3;
-  }
-  .c-grid--span-item-b {
-    grid-row: 2;
-    grid-column: 1 / 3;
-  }
-  .c-grid--span-item-c {
-    grid-row: 3;
-    grid-column: 1 / 3;
-  }
-}
 
 /*END OF GRIDS*/
 
@@ -725,14 +688,15 @@ html {
   display:block;
   margin-bottom: 2em;
   width:100%;
+  margin-right:2em;
 }
 
 .o-form__heading {
   margin-bottom: 1em;
   padding-top: 6px;
   position: relative;
-  font-size:22px;
   font-weight:600;
+  font-size:22px;
   letter-spacing: -.03em;
   color:var(--mainGrey);
 }
@@ -1066,6 +1030,10 @@ html {
 
 .padding-sm {
   padding: 5%;
+}
+
+.padding-top {
+  padding-top: 10%;
 }
 
 .padding-section {
